syntax = "proto3";

package fluxion.atom;

service AtomService {
  rpc Query(AtomQueryDTO) returns (Atom) {}
}

message Pagination = 

message AtomQueryDTO {
  optional string protocol = 1;
  optional string name = 2;
  optional bool enabled = 3;
}

message Atom {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
  bool enabled = 4;
  string creatorId = 5;
  string gmtCreate = 6;
  string gmtModify = 7;
}